# ilovepdf-python

./: .gitignore  README.md  pyproject.toml
docs/: FEATURES.md  STRUCTURE.md  TEST_STATUS.md
samples/python/: _config.py  compress_basic.py  crop_basic.py  image_watermark_basic.py  imagepdf_basic.py  pdfjpg_basic.py  protect_basic.py  repair_basic.py  rotate_basic.py  signature_management.py  split_basic.py  unlock_basic.py  validatepdfa_basic.py  watermark_basic.py
samples/python/image/: convert_basic.py  image_compress_basic.py  image_repair_basic.py  image_rotate_basic.py  removebackground_basic.py  resize_basic.py  upscale_basic.py
samples/python/pdf/: chained_task.py  compress_advanced.py  extract_basic.py  htmlpdf_basic.py  merge_basic.py  officepdf_basic.py  pagenumber_basic.py  pdfa_basic.py  pdfocr_basic.py  try_catch_errors.py
samples/python/signature/: signature_basic.py
src/iloveimg/: __init__.py  iloveimg.py
src/iloveimg/tool/: __init__.py  compressimage.py  convert.py  crop.py  removebackgroundimage.py  resize.py  rotateimage.py  upscaleimage.py  watermarkimage.py
src/ilovepdf/: __init__.py  cli.py  element.py  errors.py  file.py  helper.py  iloveimg.py  ilovepdf.py  pdf_page.py  response.py  servers.py  signature_file.py  task.py
src/ilovepdf/extra_upload_params/: __init__.py  base.py  signature.py
src/ilovepdf/request_payload/: __init__.py  form_url_encoded.py
src/ilovepdf/signature/: __init__.py  date_element.py  file_element.py  initials_element.py  (+6 more)
tests/: test_form_url_encoded.py  test_iloveimg_mapping.py  test_validation.py
(+52 files in other folders)
