[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilovepdf-python"
version = "1.0.0"
description = "Python SDK for the iLovePDF API"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "iLovePDF community"}
]
dependencies = [
  "requests>=2.31",
  "PyJWT>=2.8"
]

[project.urls]
Homepage = "https://developer.ilovepdf.com"
Repository = "https://github.com/runningZ1/ilovepdf-python"

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
ilovepdf = "ilovepdf.cli:main"
iloveimg = "ilovepdf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
